--- a/style.css
+++ b/style.css
@@ -57,6 +57,11 @@ body {
   background-size: cover;
   position: absolute;
 }
+.carousel-caption h2 {
+  color: white;
+  font-weight: 600;
+  text-align: left;
+}
 
 .navbar-brand {
   font-size: 2rem;
@@ -136,7 +141,7 @@ body {
 }
 
 #visi-misi {
-  background-color: rgb(233, 110, 110);
+  background-color: orange;
   padding: 3rem;
 }
 
@@ -207,10 +212,6 @@ body {
   display: block;
 }
 
-#maps {
-  height: 100vh;
-  margin: 0;
-}
 #maps h2 {
   font-size: 40px;
   font-weight: 600;
@@ -241,7 +242,7 @@ footer h4 {
   height: auto;
 }
 .footer-p {
-  font-size: 20px;
+  font-size: 18px;
 }
 
 #footer .footer-kanan {
@@ -250,17 +251,17 @@ footer h4 {
 .footer-kanan a {
   color: black;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .footer-kanan p {
   color: black;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .footer-tengah p {
   color: black;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .footer-tengah a {
