--- a/boot.css
+++ b/boot.css
@@ -154,7 +154,7 @@ button,
 html input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-  -webkit-appearance: button;
+  appearance: button;
   cursor: pointer;
 }
 
@@ -190,7 +190,7 @@ input[type="search"] {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
-  -webkit-appearance: textfield;
+  appearance: textfield;
 }
 
 input[type="search"]::-webkit-search-cancel-button,
@@ -3374,7 +3374,7 @@ textarea.form-control {
 }
 
 input[type="search"] {
-  -webkit-appearance: none;
+  appearance: none;
 }
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
@@ -4536,6 +4536,7 @@ tbody.collapse.in {
   font-weight: 400;
   line-height: 1.42857143;
   color: #333;
+  font-size: 15px;
   white-space: nowrap;
 }
 
@@ -5912,6 +5913,7 @@ fieldset[disabled] .navbar-inverse .btn-link:hover {
 
 .breadcrumb > li {
   display: inline-block;
+  color: black;
 }
 
 .breadcrumb > li + li:before {
@@ -7537,7 +7539,7 @@ button.list-group-item-danger.active:hover {
 }
 
 button.close {
-  -webkit-appearance: none;
+  appearance: none;
   padding: 0;
   cursor: pointer;
   background: 0 0;
