--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   font-weight: 700;
   font-size: 23px;
   color: white;
-  z-index: 0;
+  z-index: 1;
 }
 
 .navbar .nav-link {
@@ -293,7 +293,6 @@ footer h4 {
   font-size: 15px;
 }
 .footer-kanan a {
-  color: black;
   text-decoration: none;
   font-size: 15px;
 }
@@ -343,7 +342,6 @@ footer h4 {
 }
 .deskripsi-berita {
   font-size: 18px;
-  font-weight: 600;
   color: black;
 }
 
@@ -414,4 +412,17 @@ footer h4 {
 
 .perangkat-desa .card {
   border: none;
+}
+
+.btn-default {
+  background-color: green;
+  border-color: aqua;
+}
+
+.btn-group-xs > .btn,
+.btn-xs {
+  padding: 1px 5px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px;
 }
