--- a/responsive.css
+++ b/responsive.css
@@ -56,6 +56,121 @@
   }
 }
 
+@media screen and (max-width: 450px) {
+  .c-item {
+    height: 350px;
+  }
+
+  .c-img {
+    height: 100%;
+    object-fit: cover;
+  }
+  .navbar .navbar-brand {
+    font-size: 22px;
+  }
+  .footer-judul {
+    font-size: 18px;
+  }
+
+  .footer-p {
+    font-size: 15px;
+  }
+
+  footer h4 {
+    font-size: 18px;
+  }
+
+  .footer-kanan p {
+    font-size: 12px;
+  }
+
+  .footer-kanan i {
+    font-size: 12px;
+  }
+
+  .footer-tengah p {
+    font-size: 14px;
+    line-height: 1.2rem;
+  }
+
+  #maps h2 {
+    font-size: 25px;
+    margin-bottom: 2rem;
+  }
+
+  #maps iframe {
+    height: 75vh;
+    border: none;
+  }
+
+  #galeri h2 {
+    font-size: 25px;
+    margin-bottom: 2rem;
+  }
+
+  #berita h3 {
+    font-size: 25px;
+    font-weight: 700;
+  }
+
+  .judul-berita {
+    font-size: 20px;
+  }
+
+  .deskripsi-berita {
+    font-size: 15px;
+  }
+
+  .img-responsive {
+    width: 100%;
+  }
+
+  .text-bannner h1 {
+    font-size: 20px;
+  }
+  .content-artikel h1 {
+    font-size: 20px;
+  }
+
+  .content-artikel p {
+    font-size: 15px;
+  }
+  .content-artikel li {
+    font-size: 15px;
+  }
+  #Stuktur strong {
+    font-size: 20px;
+  }
+  .header-perangkat-desa h1 {
+    font-size: 20px;
+  }
+  .nama-perangkat h5 {
+    font-size: 18px;
+  }
+  .nama-perangkat p {
+    font-size: 15px;
+  }
+  #lembaga strong {
+    font-size: 20px;
+  }
+  #lembaga th {
+    font-size: 16px;
+  }
+  #lembaga a {
+    font-size: 15px;
+  }
+  #lembaga small {
+    font-size: 15px;
+  }
+
+  .berita h2 {
+    font-size: 18px;
+  }
+  .berita p {
+    font-size: 15px;
+  }
+}
+
 @media screen and (max-width: 400px) {
   .c-item {
     height: 350px;
@@ -160,6 +275,13 @@
     font-size: 15px;
   }
   #lembaga small {
+    font-size: 15px;
+  }
+
+  .berita h2 {
+    font-size: 18px;
+  }
+  .berita p {
     font-size: 15px;
   }
 }
