--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   color: black;
   font-weight: 700;
 }
-.nav-link active {
+.nav-link {
   font-weight: 700;
   color: aqua;
 }
@@ -43,7 +43,7 @@ body {
   transition: all ease-in 0.3s;
 }
 .nav-color {
-  background-color: rgba(22, 185, 90, 0.884);
+  background-color: rgb(45, 130, 163);
   transition: all ease-in-out 0.3s;
 }
 
