--- a/boot.css
+++ b/boot.css
@@ -307,12 +307,12 @@ th {
 
   .table td,
   .table th {
-    background-color: #fff !important;
+    background-color: red !important;
   }
 
   .table-bordered td,
   .table-bordered th {
-    border: 1px solid #ddd !important;
+    border: 1px solid red !important;
   }
 }
 
@@ -1403,7 +1403,6 @@ th {
 }
 
 html {
-  font-size: 10px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
@@ -7348,13 +7347,13 @@ button.list-group-item-danger.active:hover {
 }
 
 .panel-primary {
-  border-color: #337ab7;
+  border-color: rgb(45, 130, 163);
 }
 
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: var(--pr-color);
+  border-color: black;
 }
 
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
