--- a/responsive.css
+++ b/responsive.css
@@ -128,6 +128,10 @@
     display: block;
     width: 70%;
   }
+  .img-thumbnail {
+    display: block;
+    width: 70%;
+  }
 
   .text-bannner h1 {
     font-size: 20px;
